[tool.isort]
profile = "black"
[tool.pyright]
include = ["serialzy"]
exclude = [
    "**/__pycache__",
]
[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'
[tool.mypy]
[build-system]
requires = [
    "setuptools >= 35.0.2",
    "wheel >= 0.37.1"
]
build-backend = "setuptools.build_meta"
